--- a/assignment-5/index.html
+++ b/assignment-5/index.html
@@ -8,9 +8,8 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <script src="http://unpkg.com/tone"></script>
     <script src="libraries/p5.min.js"></script>
-    
+    <script src="https://unpkg.com/tone"></script>
   </head>
 
   <body>
